Fixed right panel animating only when collapsed

--- a/packages/app/app/styles.scss
+++ b/packages/app/app/styles.scss
@@ -86,7 +86,10 @@
 
   background-color: $background;
   box-shadow: -1px 2px 1px 0 rgba(255, 255, 255, 0.1);
-  transition: 0.3s all ease-in-out;
+}
+
+.right_panel:not(.compact_panel) {
+  transition: 0.3s width ease-in-out;
 }
 
 .footer {
